WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214526
Fixed regression due to
r264507
: Math.{min|max} inequality test should use DoubleNotEqualOrUnordered instead DoubleNotEqualAndOrdered.
https://bugs.webkit.org/show_bug.cgi?id=214526
Summary
Fixed regression due to r264507: Math.{min|max} inequality test should use Do...
Mark Lam
Reported
2020-07-18 18:32:17 PDT
This bug resulted in NaNs being handled by the "equal" case in some scenarios.
Attachments
proposed patch.
(6.69 KB, patch)
2020-07-18 18:46 PDT
,
Mark Lam
ysuzuki
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-07-18 18:32:57 PDT
<
rdar://problem/65778061
>
Mark Lam
Comment 2
2020-07-18 18:46:58 PDT
Created
attachment 404650
[details]
proposed patch.
Yusuke Suzuki
Comment 3
2020-07-18 19:08:58 PDT
Comment on
attachment 404650
[details]
proposed patch. r=me
Mark Lam
Comment 4
2020-07-18 21:25:03 PDT
Thanks for the review. Landed in
r264575
: <
http://trac.webkit.org/r264575
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug