Fixed regression due to r264507: Math.{min|max} inequality test should use DoubleNotEqualOrUnordered instead DoubleNotEqualAndOrdered. https://bugs.webkit.org/show_bug.cgi?id=214526 <rdar://problem/65778061>

Reviewed by Yusuke Suzuki.

JSTests:

* stress/math-max-min.js: Added.
(isNegativeZero):
(numberAsString):
(testMax):
(testMin):
(assertEq):

Source/JavaScriptCore:

This bug resulted in NaNs being handled by the "equal" case in some scenarios,
which resulted in an assertion failure in a ValueRep on an internal test.

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compileArithMinMax):



Canonical link: https://commits.webkit.org/227323@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264575 268f45cc-cd09-0410-ab3c-d52691b4dbfc